WEB-7517 Modified to build Health Checks Core library with all dependencies. Refactored Test Service POM.